--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <!-- New Food Form -->
         <form id="new-food">
             <h4>Add New Food</h4>
-            <label for="name">Name: </label>
+            <label for="new-name">Name: </label>
             <input type="text" name="name" id="new-name" required />
-            <label for="image">Image: </label>
+            <label for="new-image">Image: </label>
             <input type="text" name="image" id="new-image" required />
-            <label for="description">Description: </label>
+            <label for="new-description">Description: </label>
             <textarea name="description" id="new-description" required ></textarea>
             <input type="submit" value="Create" />
         </form>
