Added example code from the lecture

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
         </p>
 
         <h1>Here are the cryptocurrencies that we accept as payment:</h1>
+
+        <br/>
+
+        <!-- Options to filter the cryptocurrency data that we get from the external API -->
+        <select id="cryptocurrency-filter">
+            <option value="greater_than">Rank greater than 50</option>
+            <option value="all">All</option>
+            <option value="less_than">Rank less than or equal to 50</option>
+        </select>
+
+        <br/>
+
         <ul id="cryptocurrency-list">
             <!-- Cryptocurrency LI Elements here -->
         </ul>
